# anything_left

./: .gitignore  README.md  pyproject.toml  requirements.txt
remove360/: __init__.py
remove360/evaluation/: __init__.py  depth.py  sam.py  semantic.py
remove360/preprocessing/: __init__.py  depth_diff.py
remove360/utils/: __init__.py  io.py  metrics.py
scripts/: compute_depth_diff.py  convert_gsam2_to_masks.py  download_dataset.py  evaluate_depth.py  evaluate_sam.py  evaluate_semantic.py  run_pipeline.py  run_sam_on_rgb.py
